<resources>
    <string name="app_name">Diet app</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_chat">Feed</string>
    <string name="nav_search">Search</string>
    <string name="nav_add">Track</string>
    <string name="nav_chart">Chart</string>
    <string name="nav_more">Setting</string>
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="duration">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
